fix picker banner overlap

--- a/_sass/main.sass
+++ b/_sass/main.sass
@@ -41,11 +41,12 @@
       td
         font-size: 25px
     td
+      position: relative
       vertical-align: middle
       font-size: 20px
       .image-container
         .picker-banner-container
-          top: 130px
+          top: 80px
           position: absolute
           width: 118px
           height: 25px
